--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/camera_capture_button"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="50dp"
-        android:scaleType="fitCenter"
-        android:text="Take Photo"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:elevation="2dp" />
+
 
     <androidx.camera.view.PreviewView
         android:id="@+id/viewFinder"
@@ -30,6 +21,25 @@
         android:visibility="gone"
         android:id="@+id/focusCircle"/>
 
-
+    <RelativeLayout
+        android:layout_width="105dp"
+        android:layout_height="105dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
+        android:layout_centerHorizontal="true">
+        <ImageView
+            android:id="@+id/camera_capture_button"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/avd_btn_capture_on" />
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            android:id="@+id/avd_record_indicator"
+            android:src="@drawable/avd_record_on"/>
+    </RelativeLayout>
 
 </RelativeLayout>
