--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,21 @@
                 android:layout_marginBottom="-5dp"
                 android:id="@+id/progressBar"
                 android:max="20000"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="10s"
+                android:fontFamily="@font/work_sans_semi_bold"
+                android:textColor="@color/white"
+                android:elevation="2dp"
+                android:id="@+id/countDownTimer"
+                android:visibility="gone"
+                android:textSize="40sp"/>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
+
+
 
 </RelativeLayout>
