--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primary">#1DEFB0</color>
+    <color name="primary">#19D099</color>
     <color name="background">#000</color>
     <color name="placeholder">#C9C8CC</color>
     <color name="input">#282729</color>
