--- a/app/src/main/res/layout/fragment_display_name.xml
+++ b/app/src/main/res/layout/fragment_display_name.xml
@@ -8,10 +8,19 @@
 
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:id="@+id/toolbar">
+        <include layout="@layout/snippet_toolbar"/>
+    </RelativeLayout>
     <!-- Progression Indicator -->
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_marginTop="20dp"
+        android:id="@+id/progressView"
+        android:visibility="gone"
         android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content">
 
