--- a/app/src/main/res/layout/fragment_biography.xml
+++ b/app/src/main/res/layout/fragment_biography.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,12 +6,20 @@
     android:orientation="vertical"
     android:background="@color/background">
 
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:id="@+id/toolbar">
+        <include layout="@layout/snippet_toolbar"/>
+    </RelativeLayout>
 
     <!-- Progression Indicator -->
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_marginTop="20dp"
+        android:id="@+id/progressView"
+        android:visibility="gone"
         android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content">
 
@@ -47,7 +54,7 @@
         android:textColor="@color/white"
         android:textSize="17sp"/>
 
-    <TextView
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Describe the videaste in your head... (150 words)"
