--- a/app/src/main/res/layout/fragment_profile_photo.xml
+++ b/app/src/main/res/layout/fragment_profile_photo.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,13 +6,21 @@
     android:orientation="vertical"
     android:background="@color/background">
 
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:id="@+id/toolbar">
+        <include layout="@layout/snippet_toolbar"/>
+    </RelativeLayout>
 
     <!-- Progression Indicator -->
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"
+        android:id="@+id/progressView"
+        android:visibility="gone"
         android:layout_height="wrap_content">
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
