--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -42,7 +42,7 @@
 
 
 
-        <!-- Email Field -->
+        <!-- Username Field -->
 
         <RelativeLayout
             android:layout_width="wrap_content"
