--- a/app/src/main/res/layout/fragment_biography.xml
+++ b/app/src/main/res/layout/fragment_biography.xml
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Biography"
+        android:id="@+id/tvBio"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/work_sans_semi_bold"
         android:textColor="@color/white"
@@ -89,7 +90,7 @@
         android:fontFamily="@font/work_sans_medium"
         android:textSize="15sp"
         android:layout_marginTop="60dp"
-        android:id="@+id/login"/>
+        android:id="@+id/skip"/>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:layout_width="30dp"
