--- a/app/src/main/res/layout/fragment_profile_photo.xml
+++ b/app/src/main/res/layout/fragment_profile_photo.xml
@@ -50,6 +50,8 @@
         android:layout_gravity="center_horizontal"
         android:text="Profile photo"
         android:layout_marginTop="10dp"
+
+        android:id="@+id/tvProfilePhoto"
         android:fontFamily="@font/work_sans_semi_bold"
         android:textColor="@color/white"
         android:textSize="17sp"/>
@@ -85,7 +87,7 @@
         android:fontFamily="@font/work_sans_medium"
         android:textSize="15sp"
         android:layout_marginTop="60dp"
-        android:id="@+id/login"/>
+        android:id="@+id/skip"/>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:layout_width="30dp"
