--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -37,6 +37,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:clickable="true"
+                android:id="@+id/username"
                 android:focusable="true"
                 android:layout_marginTop="5dp"
                 android:layout_height="54dp"
@@ -83,6 +84,7 @@
                 android:layout_marginEnd="20dp"
                 android:clickable="true"
                 android:focusable="true"
+                android:id="@+id/displayName"
                 android:layout_marginTop="5dp"
                 android:layout_height="54dp"
                 android:background="@drawable/bg_card_settings">
@@ -130,6 +132,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_height="54dp"
+                android:id="@+id/profilePhoto"
                 android:clickable="true"
                 android:focusable="true"
                 android:background="@drawable/bg_card_settings">
@@ -173,6 +176,7 @@
                 android:layout_width="match_parent"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
+                android:id="@+id/biography"
                 android:layout_marginTop="5dp"
                 android:layout_height="54dp"
                 android:clickable="true"
@@ -372,6 +376,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_height="54dp"
                 android:clickable="true"
+                android:id="@+id/birthday"
                 android:focusable="true"
                 android:background="@drawable/bg_card_settings">
 
@@ -415,5 +420,10 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/container"/>
 
 </RelativeLayout>
