--- a/app/src/main/res/layout/fragment_birthday.xml
+++ b/app/src/main/res/layout/fragment_birthday.xml
@@ -21,6 +21,7 @@
         android:layout_gravity="center_horizontal"
         android:id="@+id/progressView"
         android:visibility="gone"
+
         android:layout_height="wrap_content">
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
@@ -49,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Birthday"
+        android:id="@+id/tvBirthday"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/work_sans_semi_bold"
         android:textColor="@color/white"
@@ -87,7 +89,7 @@
         android:fontFamily="@font/work_sans_medium"
         android:textSize="15sp"
         android:layout_marginTop="60dp"
-        android:id="@+id/login"/>
+        android:id="@+id/skip"/>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:layout_width="30dp"
