--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,6 +21,7 @@
                 android:id="@+id/profileGridView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:horizontalSpacing="1dp"
                 android:nestedScrollingEnabled="true"
                 android:numColumns="3"
