--- a/app/src/main/res/layout/layout_item_profile_card_video_thumbnail.xml
+++ b/app/src/main/res/layout/layout_item_profile_card_video_thumbnail.xml
@@ -19,13 +19,15 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
+            android:layout_height="18dp"
             android:src="@drawable/ic_play"
+            android:layout_gravity="center_vertical"
             android:tint="@color/white"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2000"
+            android:layout_marginStart="-10dp"
             android:fontFamily="@font/work_sans_regular"
             android:textColor="@color/white"
             android:id="@+id/view"/>
