--- a/app/src/main/res/layout/snippet_profile_follow.xml
+++ b/app/src/main/res/layout/snippet_profile_follow.xml
@@ -68,7 +68,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Following"
+            android:text="Close friend"
             android:layout_gravity="center_horizontal"
             android:fontFamily="@font/work_sans_medium"
             android:textColor="@color/spanish_gray"
