--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -4,13 +4,13 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M19,12.2759C19,16.3264 15.8343,19.5517 12,19.5517C8.1657,19.5517 5,16.3264 5,12.2759C5,8.2253 8.1657,5 12,5C15.8343,5 19,8.2253 19,12.2759Z"
-      android:strokeWidth="2"
+      android:pathData="M19.25,12.2759C19.25,16.4564 15.9803,19.8017 12,19.8017C8.0197,19.8017 4.75,16.4564 4.75,12.2759C4.75,8.0953 8.0197,4.75 12,4.75C15.9803,4.75 19.25,8.0953 19.25,12.2759Z"
+      android:strokeWidth="1.5"
       android:fillColor="#00000000"
       android:strokeColor="#292929"/>
   <path
       android:pathData="M17.2413,18.069L20,20.5517"
-      android:strokeWidth="2"
+      android:strokeWidth="1.5"
       android:fillColor="#00000000"
       android:strokeColor="#292929"
       android:strokeLineCap="round"/>
