--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -55,12 +55,23 @@
                     android:layout_centerInParent="true"
                     android:src="@drawable/avd_btn_capture_on" />
                 <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_centerInParent="true"
                     android:visibility="gone"
                     android:id="@+id/avd_record_indicator"
                     android:src="@drawable/avd_record_on"/>
+
+                <ImageView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_centerInParent="true"
+
+                    android:visibility="gone"
+                    android:id="@+id/recordAnim"
+                    android:repeatMode="restart"
+                    android:repeatCount="infinite"
+                    android:src="@drawable/avd_anim_record"/>
             </RelativeLayout>
 
 
@@ -87,8 +98,31 @@
                 android:id="@+id/countDownTimer"
                 android:visibility="gone"
                 android:textSize="40sp"/>
+            <RelativeLayout
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="50dp"
+                android:id="@+id/btnFinishRecord"
+                android:visibility="gone"
+                android:background="@drawable/bg_btn_primary">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_arrow_thin"
+                    android:tint="@color/white"
+                    android:rotation="180"
+                    android:layout_centerInParent="true"/>
+
+            </RelativeLayout>
         </RelativeLayout>
+
+
     </androidx.cardview.widget.CardView>
+
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -96,6 +130,12 @@
 
         <include layout="@layout/layout_bottom_navigation"/>
     </RelativeLayout>
+
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/container"/>
 
 
 </RelativeLayout>
