--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="placeholder">#C9C8CC</color>
     <color name="input">#282729</color>
     <color name="spanish_gray">#8F8F8F</color>
+    <color name="error">#FF5353</color>
 </resources>
