--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -34,40 +34,42 @@
 
 
     </androidx.cardview.widget.CardView>
-    
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="15dp"
-        android:orientation="horizontal">
-        
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:id="@+id/btnSave"
-            android:src="@drawable/avd_anim_btn_save"
-            android:layout_marginEnd="50dp"
-            android:layout_gravity="center_vertical"/>
-
-        <RelativeLayout
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:id="@+id/btnUpload"
-            android:background="@drawable/bg_btn_primary">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="15dp"
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_check"
-                android:tint="@color/white"
-                android:layout_centerInParent="true"/>
+                android:id="@+id/btnSave"
+                android:src="@drawable/avd_anim_btn_save"
+                android:layout_marginEnd="50dp"
+                android:layout_gravity="center_vertical"/>
 
-        </RelativeLayout>
-    </LinearLayout>
+            <RelativeLayout
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:id="@+id/btnUpload"
+                android:background="@drawable/bg_btn_primary">
 
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_check"
+                    android:tint="@color/white"
+                    android:layout_centerInParent="true"/>
+
+            </RelativeLayout>
+        </LinearLayout>
+    </RelativeLayout>
 
 
 </RelativeLayout>
