--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -22,10 +22,10 @@
                 android:src="@drawable/ic_cross"
                 android:tint="@color/white"
                 android:id="@+id/back"
-                android:elevation="1dp"/>
+                android:elevation="2dp"/>
             <VideoView
-                android:background="@color/background"
                 android:layout_width="match_parent"
+                android:elevation="1dp"
                 android:layout_height="match_parent"
                 android:id="@+id/videoView"/>
 
