--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -9,6 +9,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/cardView"
         app:cardCornerRadius="10dp"
         android:layout_marginBottom="50dp">
 
@@ -126,10 +127,22 @@
                     android:layout_centerInParent="true"/>
 
             </RelativeLayout>
+
         </RelativeLayout>
 
 
     </androidx.cardview.widget.CardView>
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        app:indicatorColor="@color/white"
+        android:indeterminateOnly="true"
+        android:id="@+id/progress_bar"
+        android:elevation="3dp"
+        app:trackThickness="1dp"
+        android:visibility="gone"/>
 
 
     <RelativeLayout
