--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -26,13 +26,30 @@
             android:fontFamily="@font/work_sans_regular"
             android:textColor="@color/white"
             android:textSize="15sp"
+            android:backgroundTint="@android:color/transparent"
             android:textColorHint="@color/placeholder"
             android:id="@+id/description"/>
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:text="Thumbnail (select a frame from your video)"
+        android:fontFamily="@font/work_sans_regular"
+        android:layout_marginBottom="5dp"
+        android:textColor="@color/placeholder"/>
+
+    <androidx.appcompat.widget.AppCompatSeekBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:id="@+id/seekBar"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/bg_bottom_line"
         android:orientation="horizontal">
 
@@ -133,5 +150,17 @@
 
 
     </LinearLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="320dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/bg_btn_primary"
+        android:layout_gravity="center"
+        android:text="Save"
+        android:textAllCaps="false"
+        android:fontFamily="@font/work_sans_regular"
+        android:textSize="18sp"
+        android:id="@+id/save"/>
 
 </LinearLayout>
