--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -25,7 +25,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Email"
+                android:hint="@string/sign_in_email"
                 android:maxLines="1"
                 android:fontFamily="@font/work_sans_regular"
                 android:textColorHint="@color/white"
@@ -55,7 +55,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Password"
+                android:hint="@string/sign_in_password"
                 android:maxLines="1"
                 android:fontFamily="@font/work_sans_regular"
                 android:textColorHint="@color/white"
@@ -80,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:text="Forgot Password?"
+                android:text="@string/forgot_password"
                 android:layout_marginTop="10dp"
                 android:id="@+id/forgotPassword"
                 android:textColor="@color/placeholder"
@@ -95,7 +95,7 @@
             android:layout_marginTop="50dp"
             android:background="@drawable/bg_btn_primary"
             android:layout_gravity="center"
-            android:text="Sign in"
+            android:text="@string/button_sign_in"
             android:textAllCaps="false"
             android:fontFamily="@font/work_sans_regular"
             android:textSize="18sp"
@@ -105,7 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Create an account"
+            android:text="@string/create_an_account"
             android:textColor="@color/placeholder"
             android:fontFamily="@font/work_sans_medium"
             android:textSize="15sp"
