--- a/app/src/main/res/layout/fragment_display_name.xml
+++ b/app/src/main/res/layout/fragment_display_name.xml
@@ -39,8 +39,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="🕵️‍"
-            android:textSize="35dp"/>
+            android:text="@string/emoji_inspector"
+            android:textSize="35sp"/>
 
 
     </RelativeLayout>
@@ -62,7 +62,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Display name"
+            android:hint="@string/input_display_name"
             android:maxLines="1"
             android:fontFamily="@font/work_sans_regular"
             android:textColorHint="@color/white"
@@ -83,7 +83,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/bg_btn_primary"
         android:layout_gravity="center"
-        android:text="Next"
+        android:text="@string/button_next"
         android:textAllCaps="false"
         android:fontFamily="@font/work_sans_regular"
         android:textSize="18sp"
@@ -93,7 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Skip"
+        android:text="@string/skip"
         android:textColor="@color/placeholder"
         android:fontFamily="@font/work_sans_medium"
         android:textSize="15sp"
