--- a/app/src/main/res/layout/fragment_birthday.xml
+++ b/app/src/main/res/layout/fragment_birthday.xml
@@ -39,8 +39,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="🥳️‍"
-            android:textSize="35dp"/>
+            android:text="@string/emoji_party"
+            android:textSize="35sp"/>
 
 
     </RelativeLayout>
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Birthday"
+        android:text="@string/text_birthday"
         android:id="@+id/tvBirthday"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/work_sans_semi_bold"
@@ -74,7 +74,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/bg_btn_primary"
         android:layout_gravity="center"
-        android:text="Next"
+        android:text="@string/button_next"
         android:textAllCaps="false"
         android:fontFamily="@font/work_sans_regular"
         android:textSize="18sp"
@@ -84,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Skip"
+        android:text="@string/skip"
         android:textColor="@color/placeholder"
         android:fontFamily="@font/work_sans_medium"
         android:textSize="15sp"
