--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -32,15 +32,15 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Email"
+            android:hint="@string/sign_in_email"
             android:maxLines="1"
             android:fontFamily="@font/work_sans_regular"
             android:textColorHint="@color/white"
             android:theme="@style/MyFilledBox"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            android:inputType="text"
-            android:id="@+id/displayName"
+            android:inputType="textEmailAddress"
+            android:id="@+id/email"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:backgroundTint="@android:color/transparent"/>
@@ -53,7 +53,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/bg_btn_primary"
         android:layout_gravity="center"
-        android:text="Reset my password"
+        android:text="@string/reset_my_password"
         android:textAllCaps="false"
         android:fontFamily="@font/work_sans_regular"
         android:textSize="18sp"
