--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -22,14 +22,25 @@
     </androidx.cardview.widget.CardView>
 
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:elevation="3dp"
+        android:orientation="vertical"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="80dp">
-        <include layout="@layout/snippet_video_reaction"/>
-    </RelativeLayout>
+        android:layout_marginBottom="10dp"
+        android:elevation="3dp">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end">
+
+            <include layout="@layout/snippet_video_reaction"/>
+        </RelativeLayout>
+
+        <include layout="@layout/snippet_bottom_video_description"/>
+    </LinearLayout>
+
+
 
 </RelativeLayout>
