--- a/app/src/main/res/layout/snippet_toolbar.xml
+++ b/app/src/main/res/layout/snippet_toolbar.xml
@@ -11,7 +11,8 @@
         android:tint="@color/white"
         android:id="@+id/back"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="15dp"/>
+        android:layout_marginStart="15dp"
+        android:contentDescription="@string/img_description" />
 
     <TextView
         android:layout_width="wrap_content"
