--- a/app/src/main/res/layout/snippet_profile_information.xml
+++ b/app/src/main/res/layout/snippet_profile_information.xml
@@ -19,7 +19,7 @@
             android:layout_height="100dp"
             android:id="@+id/profile_photo"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/bg_welcome"
+            android:src="@drawable/default_photo"
             android:scaleType="centerCrop"
             android:padding="4dp"
             app:shapeAppearance="@style/ShapeAppearanceOverlay.Avatar"/>
@@ -37,12 +37,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Riad MAHI"
+                    android:text=""
                     android:textSize="18sp"
                     android:fontFamily="@font/work_sans_semi_bold"
                     android:layout_gravity="center_vertical"
                     android:textColor="@color/white"
-                    android:id="@+id/profile_displayName"/>
+                    android:id="@+id/displayName"/>
 
                 <ImageView
                     android:layout_width="35dp"
@@ -56,12 +56,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="riadmahi"
+                android:text=""
                 android:textSize="18sp"
                 android:fontFamily="@font/work_sans_regular"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/white"
-                android:id="@+id/profile_username"/>
+                android:id="@+id/username"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -75,7 +75,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Normalement ici, c'est une bio"
+        android:text=""
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:id="@+id/biography"
