--- a/app/src/main/res/layout/snippet_profile_follow.xml
+++ b/app/src/main/res/layout/snippet_profile_follow.xml
@@ -18,6 +18,7 @@
             android:layout_gravity="center_horizontal"
             android:fontFamily="@font/work_sans_medium"
             android:textColor="@color/white"
+            android:id="@+id/numFollowing"
             android:textSize="16sp"/>
         <TextView
             android:layout_width="wrap_content"
@@ -41,6 +42,7 @@
             android:layout_gravity="center_horizontal"
             android:fontFamily="@font/work_sans_medium"
             android:textColor="@color/white"
+            android:id="@+id/numFollowers"
             android:textSize="16sp"/>
         <TextView
             android:layout_width="wrap_content"
@@ -61,6 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
+            android:id="@+id/numCloseFriends"
             android:layout_gravity="center_horizontal"
             android:fontFamily="@font/work_sans_medium"
             android:textColor="@color/white"
