--- a/app/src/main/res/layout/snippet_view_profile_follow.xml
+++ b/app/src/main/res/layout/snippet_view_profile_follow.xml
@@ -34,5 +34,29 @@
         android:textSize="16sp"
         android:id="@+id/follow"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:background="@drawable/bg_btn_dark"
+        android:layout_gravity="center"
+        android:text="@string/button_un_follow"
+        android:visibility="gone"
+        android:textAllCaps="false"
+        android:fontFamily="@font/work_sans_medium"
+        android:textSize="16sp"
+        android:id="@+id/unFollow"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:background="@drawable/bg_btn_dark"
+        android:layout_gravity="center"
+        android:text="wait response"
+        android:visibility="visible"
+        android:textAllCaps="false"
+        android:fontFamily="@font/work_sans_medium"
+        android:textSize="16sp"
+        android:id="@+id/waitResponse"/>
+
 
 </LinearLayout>
