--- a/app/src/main/res/layout/snippet_view_profile_follow.xml
+++ b/app/src/main/res/layout/snippet_view_profile_follow.xml
@@ -52,7 +52,7 @@
         android:background="@drawable/bg_btn_dark"
         android:layout_gravity="center"
         android:text="wait response"
-        android:visibility="visible"
+        android:visibility="gone"
         android:textAllCaps="false"
         android:fontFamily="@font/work_sans_medium"
         android:textSize="16sp"
