--- a/app/src/main/res/layout/snippet_profile_information.xml
+++ b/app/src/main/res/layout/snippet_profile_information.xml
@@ -52,6 +52,16 @@
                     android:id="@+id/editProfile"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="8dp"/>
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/ic_flag"
+                    android:tint="@color/white"
+                    android:visibility="gone"
+                    android:id="@+id/report"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="8dp"/>
             </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
