--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -9,11 +9,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@color/background">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:id="@+id/profile_photo"
             android:layout_gravity="center_vertical"
             android:src="@drawable/default_photo"
@@ -32,7 +33,100 @@
             android:fontFamily="@font/work_sans_medium"
             android:textColor="@color/white"
             android:textSize="16sp"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_height="wrap_content">
 
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_ellipses"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="20dp"
+                android:tint="@color/white"/>
+        </RelativeLayout>
+
+
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
+        android:id="@+id/messageRecycler"
+        android:layout_marginBottom="50dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="50dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:background="@color/background"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="50dp"
+            android:background="@drawable/bg_message_input"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="65dp">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:id="@+id/messageInput"
+                android:hint="Type your message here!"
+                android:fontFamily="@font/work_sans_regular"
+                android:textColor="@color/white"
+                android:textColorHint="@color/placeholder"
+                android:layout_centerVertical="true"
+                android:textSize="15sp"
+                android:backgroundTint="@android:color/transparent"/>
+        </RelativeLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:cardCornerRadius="50dp"
+            android:layout_marginStart="-55dp"
+            android:id="@+id/send"
+            android:visibility="gone"
+            app:cardBackgroundColor="@color/primary"
+            android:layout_gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:src="@drawable/ic_arrow"
+                android:layout_gravity="center"
+                android:tint="@color/white"
+                android:id="@+id/arrow"
+                android:rotation="180"/>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:cardCornerRadius="50dp"
+            android:id="@+id/gallery"
+            android:visibility="visible"
+            app:cardBackgroundColor="@color/input"
+
+            android:layout_marginStart="-55dp"
+            android:layout_gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_gallery"
+                android:layout_gravity="center"
+                android:tint="@color/white"/>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
