--- a/app/src/main/res/layout/layout_item_new_chat.xml
+++ b/app/src/main/res/layout/layout_item_new_chat.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/avd_checkbox"
                 android:layout_alignParentEnd="true"
+                android:id="@+id/checkbox"
                 android:layout_marginEnd="15dp"
                 android:layout_gravity="end"/>
         </RelativeLayout>
