--- a/app/src/main/res/layout/snippet_view_profile_follow.xml
+++ b/app/src/main/res/layout/snippet_view_profile_follow.xml
@@ -30,6 +30,7 @@
         android:layout_gravity="center"
         android:text="@string/button_follow"
         android:textAllCaps="false"
+        android:visibility="gone"
         android:fontFamily="@font/work_sans_medium"
         android:textSize="16sp"
         android:id="@+id/follow"/>
