--- a/app/src/main/res/layout/layout_item_message_right.xml
+++ b/app/src/main/res/layout/layout_item_message_right.xml
@@ -3,27 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:minHeight="40dp">
+    android:layout_marginTop="5dp"
+    android:minHeight="35dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_item_message_right"
-        android:minHeight="40dp"
+        android:minHeight="35dp"
         android:id="@+id/rel"
+
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
         android:layout_marginStart="80dp"
         android:layout_marginEnd="40dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Voici une template"
+            android:text="Bonjour "
             android:id="@+id/textMessageRight"
-            android:layout_margin="15dp"
+            android:layout_centerInParent="true"
             android:textColor="@color/white"
             android:fontFamily="@font/work_sans_regular"
-            android:textSize="16sp"/>
+            android:textSize="15sp"/>
 
     </RelativeLayout>
 
@@ -31,11 +35,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/rel"
-        android:text="Today at "
+        android:text=""
         android:fontFamily="@font/work_sans_regular"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="50dp"
-        android:id="@+id/timestamp"/>
+        android:id="@+id/timestampRight"/>
 
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="35dp"
