--- a/app/src/main/res/layout/activity_my_moments.xml
+++ b/app/src/main/res/layout/activity_my_moments.xml
@@ -1,33 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@drawable/bg_bottom_sheet"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:background="@color/background"
+    android:padding="0dp"
+    android:layout_height="match_parent">
 
     <RelativeLayout
-        android:layout_width="70dp"
-        android:layout_height="4dp"
-        android:background="@drawable/bg_line_close_bottom_sheet"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"/>
+        android:layout_width="match_parent"
+        android:id="@+id/rel"
+        android:background="@drawable/bg_bottom_line"
+        android:layout_height="50dp">
 
+    <ImageView
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:src="@drawable/ic_cross"
+        android:tint="@color/white"
+        android:layout_centerVertical="true"
+        android:id="@+id/close"
+        android:layout_marginStart="15dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:orientation="vertical"
-        android:layout_marginTop="15dp">
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:id="@+id/linearLayout"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="My moments"
-            android:fontFamily="@font/work_sans_regular"
+            android:text="YOUR MOMENTS"
+            android:fontFamily="@font/work_sans_medium"
             android:textColor="@color/white"
             android:textSize="16sp"/>
 
@@ -35,18 +41,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="6 videos"
+            android:text="videos"
             android:id="@+id/momentsNumber"
             android:fontFamily="@font/work_sans_regular"
             android:textColor="@color/placeholder"
             android:textSize="14sp"/>
 
     </LinearLayout>
+    </RelativeLayout>
+
 
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:numColumns="3"
+        android:focusable="true"
+        android:layout_below="@+id/rel"
         android:id="@+id/momentsGridView"/>
 
     <TextView
@@ -60,8 +70,9 @@
         android:textAlignment="center"
         android:id="@+id/noMoments"
         android:visibility="gone"
+        android:layout_below="@+id/rel"
         android:layout_margin="50dp"/>
 
 
 
-</LinearLayout>
+</RelativeLayout>
