--- a/app/src/main/res/layout/layout_item_message_left.xml
+++ b/app/src/main/res/layout/layout_item_message_left.xml
@@ -3,24 +3,36 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:minHeight="40dp">
+    android:minHeight="35dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_item_message_left"
-        android:minHeight="40dp"
+        android:minHeight="35dp"
         android:id="@+id/rel"
         android:layout_alignParentStart="true"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="80dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:fontFamily="@font/work_sans_medium"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="15dp"
+            android:id="@+id/displayName"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
             android:id="@+id/textMessageLeft"
-            android:layout_margin="15dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="10dp"
             android:textColor="@color/white"
             android:fontFamily="@font/work_sans_regular"
             android:textSize="16sp"/>
@@ -31,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/rel"
-        android:text="Today at "
+        android:text=""
         android:fontFamily="@font/work_sans_regular"
         android:layout_marginStart="50dp"
         android:id="@+id/timestampLeft"/>
