--- a/app/src/main/res/layout/layout_item_new_chat.xml
+++ b/app/src/main/res/layout/layout_item_new_chat.xml
@@ -2,14 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bg_item_new_chat"
-    android:layout_margin="10dp"
+    android:background="@drawable/bg_bottom_line"
+    android:padding="10dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
