--- a/app/src/main/res/layout/layout_item_message_left.xml
+++ b/app/src/main/res/layout/layout_item_message_left.xml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Une deux trois"
+            android:text=""
             android:id="@+id/textMessageLeft"
             android:layout_marginTop="10dp"
             android:layout_marginStart="15dp"
